# AdventOfCode

./: .gitignore  README.md
2020/: README.md
2020/Java/: .gitignore
2020/Python/: .gitignore  Day1.py  Day10.py  Day11.py  Day12.py  Day13.py  Day14.py  Day15.py  Day16.py  Day17.py  Day18.py  Day19.py  Day2.py  Day20.py  Day21.py  Day22.py  Day23.py  Day24.py  Day25.py  Day3.py  Day4.py  Day5.py  Day6.py  Day7.py  Day8.py  Day9.py
2021/: README.md
2021/Cpp/: .gitignore  Makefile
2022/: README.md
2022/Cpp/: .gitignore  Makefile
2023/: README.md
2023/Rust/: Cargo.toml
2023/Rust/src/: days.rs  lib.rs  main.rs
2023/Rust/src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
2025/: README.md
2025/Rust/: .gitignore  Cargo.toml
Day1/Java/: Main.java
Day1/Python/: Main.py
Day10/Java/: Main.java
Day10/Python/: Main.py
Day11/Java/: Main.java
Day11/Python/: Main.py
Day12/Java/: Main.java
Day12/Python/: Main.py
Day13/Java/: Main.java
Day13/Python/: Main.py
Day14/Java/: Main.java
Day14/Python/: Main.py
Day15/Java/: Main.java
Day15/Python/: Main.py
Day16/Java/: Main.java
Day16/Python/: Main.py
Day17/Java/: Main.java
Day17/Python/: Main.py
Day18/Java/: Main.java
Day18/Python/: Main.py
Day19/Java/: Main.java
Day19/Python/: Main.py
Day2/Java/: Main.java
Day2/Python/: Main.py
Day20/Java/: Main.java
Day20/Python/: Main.py
Day21/Java/: Main.java
Day21/Python/: Main.py
Day22/Java/: Main.java
Day22/Python/: Main.py
(+188 files in other folders)
